--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Citas médicas</string>
-    <string name="menu_gallery">Medicamentos</string>
+    <string name="menu_citas">Citas médicas</string>
+    <string name="menu_medicamentos">Medicamentos</string>
     <string name="menu_detalles_citas">Detalles cita</string>
     <string name="action_eliminarCredenciales">Eliminar Credenciales</string>
     <string name="action_eliminarUsuario">Eliminar Usuario</string>
@@ -18,6 +18,7 @@
     <string name="texto_credenciales">¿Guardar credenciales?</string>
     <string name="boton_acceder">Acceder</string>
     <string name="boton_regristrarse">Registrarse</string>
+    <string name="altaUsuario">Nuevo Usuario</string>
 
     <string name="boton_aceptar">Aceptar</string>
     <string name="boton_cancelar">Cancelar</string>
